--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "next": "10.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "eslint": "7",
+    "eslint-config-next": "12.0.4"
   }
 }
